<resources>
    <string name="app_name">StudentJourney</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="home"><!-- No Text --></string>
    <string name="menu"><!-- No Text --></string>
    <string name="name">Name</string>
    <string name="prep">Prep</string>
    <string name="prep_and_learning">Prep and Learning</string>
    <string name="certification">Certification</string>
    <string name="alumni_life_long_learning"><![CDATA[Alumni & Life-Long Learning]]></string>
    <string name="default_web_client_id" />
    <string name="teaching_and_learning">Teaching and Learning</string>
    <string name="question">Question</string>
    <string name="assignment_with_dates">Assignment With Dates</string>
    <string name="alumni">Alumni</string>
    <string name="assessments">Assessments</string>
    <string name="student">Student Support</string>
    <string name="sign_in">Sign IN</string>
    <string name="sign_in1">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>

    <!--Student Support Questions-->
    <string name="Question1">Who owns Stadio?</string>
    <string name="Question2">Who is Stadio?</string>
    <string name="Question3">What faculties and schools do you have?</string>
    <string name="Question4">Are you planning any new faculties or schools?</string>
    <string name="Question5">Where are your campuses?</string>
    <string name="Question6">Why was Stadio Established?</string>

    <!--Student Support Questions-->
    <string name="Answer1">Answer</string>
    <string name="Answer2">Answer</string>
    <string name="Answer3">Answer</string>
    <string name="Answer4">Answer</string>
    <string name="Answer5">Answer</string>
    <string name="Answer6">Answer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="percentage">Percentage:</string>
    <string name="_86">86%</string>
    <string name="web_development_project">Web Development Project</string>
    <string name="module_name">Module Name:</string>

</resources>