<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgrey"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:translationX="30dp"
            android:translationY="50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="154dp"
            android:background="@drawable/logo"
            android:scaleX=".7"
            android:scaleY=".7"
            android:translationY="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:translationY="60dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:translationY="60dp">

            <EditText
                android:id="@+id/Pword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btnlogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/greenbutts"
            android:translationX="150dp"
            android:translationY="80dp"
            />

        <TextView
            android:id="@+id/tvCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:translationY="100dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>